style: Fix background fill on tile_buttons
- addresses issue with tiles overlapping each other in the grid

Closes: https://gitlab.gnome.org/GNOME/gnome-shell/-/issues/7577

--- a/data/theme/gnome-shell-sass/_drawing.scss
+++ b/data/theme/gnome-shell-sass/_drawing.scss
@@ -357,6 +357,9 @@
     &:insensitive { @include button(insensitive, $tc:$fg, $c:$bg, $always_dark: $system);}
   } @else {
     @include button(normal, $tc:$fg, $c:$bg, $style: flat, $always_dark: $system);
+    // override the mixin to have the flat button always be transparent
+    // fixes issue with overlapping tiles
+    background-color: transparent;
     &:focus { @include button(focus, $tc:$fg, $c:$bg, $style: flat, $always_dark: $system);}
     &:hover { @include button(hover, $tc:$fg, $c:$bg, $style: flat, $always_dark: $system);}
     &:active { @include button(active, $tc:$fg, $c:$bg, $style: flat, $always_dark: $system);}
